--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bluez-async = "0.3.0"
 eyre = "0.6.5"
 futures = "0.3.8"
 futures-channel = "0.3.8"
-homie-device = { version = "0.4.0", git = "https://github.com/alsuren/mijia-homie/", branch = "hasnode" }
+homie-device = "0.4.1"
 itertools = "0.10.0"
 log = "0.4.11"
 pretty_env_logger = "0.4.0"
