Upload test coverage to codecov.io.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: sudo apt-get install libdbus-1-dev
+      - name: Install grcov
+        run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -
       - name: Build
         run: cargo build --verbose
       - name: Run tests
@@ -25,3 +27,18 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
+      - name: Run tests with coverage
+        run: >-
+          CARGO_INCREMENTAL=0
+          RUSTDOCFLAGS="-Cpanic=abort"
+          RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
+          RUSTC_BOOTSTRAP=1
+          cargo test --verbose
+      - name: Convert coverage
+        run: ./grcov . -s . --binary-path target/debug/ -t lcov --branch --ignore-not-existing -o target/debug/lcov.info
+      - name: Upload coverage to codecov.io
+        uses: briansmith/codecov-codecov-action@v1
+        with:
+          directory: ./target/debug
+          fail_ci_if_error: true
+          verbose: true
