Build before testing

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,6 +37,11 @@ jobs:
         run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -
       - name: Install llvm-tools
         run: rustup component add llvm-tools-preview
+      - name: Build for coverage
+        run: >-
+          RUSTC_BOOTSTRAP=1
+          RUSTFLAGS="-Zinstrument-coverage"
+          cargo build --verbose
       - name: Run tests with coverage
         run: >-
           RUSTC_BOOTSTRAP=1
