--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install libdbus-1-dev
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --all-features
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --all-features
       - name: Run clippy
         uses: actions-rs/clippy-check@v1
         with:
@@ -39,11 +39,11 @@ jobs:
       - name: Install llvm-tools
         run: rustup component add llvm-tools-preview
       - name: Build for coverage
-        run: cargo build --verbose
+        run: cargo build --all-features
         env:
           RUSTFLAGS: "-Zinstrument-coverage"
       - name: Run tests with coverage
-        run: cargo test --verbose
+        run: cargo test --all-features
         env:
           RUSTFLAGS: "-Zinstrument-coverage"
           LLVM_PROFILE_FILE: "test-coverage-%p-%m.profraw"
@@ -54,4 +54,3 @@ jobs:
         with:
           directory: ./target/debug
           fail_ci_if_error: true
-          verbose: true
