--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,24 +10,24 @@ keywords = ["bbq", "ble", "bluetooth", "homie", "mqtt"]
 categories = ["network-programming"]
 
 [dependencies]
-backoff = { version = "0.3.0", features = ["tokio"] }
+backoff = { version = "0.4.0", features = ["tokio"] }
 color-backtrace = "0.5.0"
 cloudbbq = "0.2.0"
 bluez-async = "0.3.1"
 eyre = "0.6.5"
 futures = "0.3.8"
 futures-channel = "0.3.8"
-homie-device = "0.5.0"
+homie-device = "0.6.0"
 itertools = "0.10.0"
 log = "0.4.11"
 pretty_env_logger = "0.4.0"
-rumqttc = "0.4.0"
+rumqttc = "0.8.0"
 rustls = "0.19.0"
 rustls-native-certs = "0.5.0"
 serde_derive = "1.0.118"
 serde = "1.0.118"
 stable-eyre = "0.2.1"
-tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.15.0", features = ["io-util", "macros", "rt-multi-thread"] }
 toml = "0.5.8"
 url = { version = "2.2.0", features = ["serde"] }
 
