--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: sudo apt-get install libdbus-1-dev
+        run: sudo apt-get update && sudo apt-get install libdbus-1-dev
       - name: Build
         run: cargo build --all-features
       - name: Run tests
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: sudo apt-get install libdbus-1-dev
+        run: sudo apt-get update && sudo apt-get install libdbus-1-dev
       - name: Install grcov
         run: curl -L https://github.com/mozilla/grcov/releases/download/v0.8.11/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar -xjf -
       - name: Install llvm-tools
