--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Upload package
         uses: actions/upload-artifact@v4
         with:
-          name: debian-packages
+          name: debian-package-${{ matrix.target }}
           path: target/${{ matrix.target }}/debian/
 
   release:
@@ -79,8 +79,6 @@ jobs:
     steps:
       - name: Download packages
         uses: actions/download-artifact@v4
-        with:
-          name: debian-packages
       - name: Parse tag for package and version
         id: parse_tag
         uses: actions-ecosystem/action-regex-match@v2
@@ -101,5 +99,5 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "cloudbbq-homie_*.deb"
+          asset_path: "debian-package-*/cloudbbq-homie_*.deb"
           asset_content_type: application/vnd.debian.binary-package
